--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<!--suppress ALL -->
 <html>
 <head>
   <meta charset="utf-8">
@@ -17,7 +18,10 @@
 <body>
 <div class="reveal">
   <div class="slides">
-    <section>Hello World!</section>
+    <section data-markdown="content.md"
+             data-separator="^\n\n\n"
+             data-separator-vertical="^\n\n"
+             data-charset="iso-8859-15"/>
   </div>
 </div>
 
