Separate presentation slides and workshop slides.

--- a/workshop.html
+++ b/workshop.html
@@ -18,7 +18,7 @@
 <body>
 <div class="reveal">
   <div class="slides">
-    <section data-markdown="content/index.md"
+    <section data-markdown="workshop.md"
              data-separator="^\n\n\n"
              data-separator-vertical="^\n\n"
              data-charset="iso-8859-15"/>
